--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,17 +1,22 @@
+<!DOCTYPE html>
 <html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <base href="/">
+    <title>The Dev</title>
 
-<head>
-<title>The Dev</title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+
 </head>
-
-</head>
-
 
 <body>
-
 <h3>The Dev</h3>
 
+
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+
 </body>
-
-
 </html>
